# Sorority

./: .gitignore  README.md
alert_sim_app/alert_app/: .gitignore  pubspec.yaml
alert_sim_app/alert_app/android/app/src/main/: AndroidManifest.xml
alert_sim_app/alert_app/lib/: main.dart
alert_sim_app/alert_app/lib/models/: nodo.dart
alert_sim_app/alert_app/lib/native/: rust_bridge.dart  simulacion.dart
alert_sim_app/alert_app/lib/screens/: home_screen.dart
alert_sim_app/alert_app/lib/widgets/: nodo_card.dart
alert_sim_app/alert_app/windows/: CMakeLists.txt
assets/: Grabación de pantalla desde 2026-03-08 02-30-11.webm
q_verified_core/: .gitignore  Cargo.toml  PROTOCOL.md
q_verified_core/src/: lib.rs  main.rs  simulation.rs
q_verified_core/src/domain/: alert.rs  identity.rs  mod.rs  node.rs
q_verified_core/src/network/: gossip.rs  mensaje_red.rs  mod.rs
